# crow-engine

./: .gitignore  .gitmodules  CMakeLists.txt  NOTES.md  README.md  copy-assets.cmake  data_read.py  encodingTimes.txt  networkTransferTimes.txt  renderTimes_on_remote_complex.txt  renderTimes_only_self.txt  renderTimes_simple_only_self.txt  renderTimes_simple_with_remote.txt  renderTimes_with_remote.txt
lib/: assimp.lib
res/models/: bark.json  color_sphere.json  sphere.json
res/shaders/: Basic.frag  Basic.vert  colors.fs  pbr.frag  pbr.vert
res/shaders/background/: background.vs
res/textures/background/: background1.hdr
shaders/: basic.vert  colored_triangle.frag  colored_triangle.vert  compile.bat  compile_lab.bat  cubemap.frag  cubemap.vert  default_lit.frag  default_lit.vert  input_structures.glsl  mesh.vert  mesh.vert.spv  mesh_pbr.frag  mesh_pbr.frag.spv  mesh_pbr_no_ibl.frag  mesh_pbr_no_ibl.frag.spv  pbr_functions.glsl  pbr_lit.frag  textured_lit.frag  tri_mesh.vert  tri_mesh_normal_ssbo.vert  tri_mesh_ssbo.vert  triangle.frag
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  camera.cpp  camera.h  camera.hpp  input.cpp  input.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  networker.cpp  networker.h  renderer.cpp  renderer.hpp  swapchain.cpp  swapchain.hpp  utilities.cpp  utilities.hpp  vertex.cpp  vertex.hpp  vk_descriptors.cpp  vk_descriptors.h  vk_descriptors.hpp  vk_engine.cpp  vk_engine.h  vk_engine.hpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_initializers.hpp  vk_loader.cpp  vk_loader.h  vk_mesh.cpp  vk_mesh.hpp  vk_pipelines.cpp  vk_pipelines.h  (+6 more)
src/generic/: transform.hpp
src/rendering/: camera.cpp  camera.hpp  cubemap.cpp  cubemap.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_dict.cpp  shader_dict.hpp  texture.hpp  transform.cpp  transform.hpp
src/utilities/: allocated_memory.hpp  deletion_queue.cpp  deletion_queue.hpp  load_file.cpp  load_file.hpp  pipeline_builder.cpp  pipeline_builder.hpp
